Integrated Popup in the UI

--- a/webApp/Frontend/index.html
+++ b/webApp/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>THE CODE REVIEW</title>
+	<title>FASAL FUSION</title>
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,110 +19,112 @@
 </head>
 
 <body>
-	<!-- <div class="header">
-		<h1>THE CODE REVIEW</h1>
-	</div> -->
 	<div class="container">
 
 		<h2>FASAL FUSION</h2>
-		<img class="logoone" src="/img/logo.png" alt="">
+		<!-- <img class="logoone" src="/img/logo.png" alt=""> -->
 		<p class="para1">A Crop Recommendation System</p>
 
-		<!-- <div class="border-up"></div> -->
-		<!-- <div class="border-down"></div> -->
 		<form id="dataForm">
 			<fieldset>
 				<legend class="contact" style="margin-left: 9%;">Input Values:</legend>
-				<button type="button" class="two" id="language-button" data-language="hindi" onclick="changeLanguage()">Hindi</button>
+				<button type="button" class="two" id="language-button" data-language="hindi"
+					onclick="changeLanguage()">Hindi</button>
 				<br /><br /><br />
 				<div class="row">
 					<label for="name">Nitrogen</label>
 					<div class="tf">
-						<input type="text" id="Nitrogen" name="user_name" placeholder="Required"><br />
+						<input type="text" id="Nitrogen" name="user_name" placeholder="Required" max="150"><br />
 					</div>
 				</div>
 				<div class="row">
 					<label for="email">Phosphorus</label>
 					<div class="tf">
-						<input type="text" id="Phosphorus" name="user_mail" placeholder="Required"><br />
+						<input type="text" id="Phosphorus" name="user_mail" placeholder="Required" max="150"><br />
 					</div>
 				</div>
 				<div class="row">
 					<label for="number">Potassium</label>
 					<div class="tf">
-						<input type="text" id="Potassium" name="user_number" placeholder="Required"><br />
+						<input type="text" id="Potassium" name="user_number" placeholder="Required" max="210"><br />
 					</div>
 				</div>
 				<div class="row">
 					<label for="address">Temperature</label>
 					<div class="tf">
-						<input type="text" id="Temperature" name="user_address" placeholder="Required"><br />
+						<input type="text" id="Temperature" name="user_address" placeholder="Required" max="44"><br />
 					</div>
 				</div>
 				<div class="row">
 					<label for="city">pH</label>
 					<div class="tf">
-						<input type="text" id="pH" name="user_city" placeholder="Required"><br />
+						<input type="text" id="pH" name="user_city" placeholder="Required" max="10"><br />
 					</div>
 				</div>
-				<!-- <div class="row">
-					<label for="state">State</label>
-					<div class="tf">
-						<select id="state"><br><br />
-							<option value="" disabled selected class="dis">Choose State</option>
-							<option value="Maharashtra">Maharashtra</option>
-							<option value="Gujarat">Gujarat</option>
-							<option value="Madhaya Pradesh">Madhaya Pradesh</option>
-							<option value="Punjab">Punjab</option>
-							<option value="Karnataka">Karnataka</option>
-							<option value="Andhara Pradesh">Andhara Pradesh </option>
-							<option value="Uttarakhand">Uttarakhand</option>
-							<option value="Meghalaya">Meghalaya</option>
-							<option value="Sikkim">Sikkim</option>
-							<option value="Tamil Nadu">Tamil Nadu</option>
-							<option value="Kerela">Kerela</option>
-						</select>
-					</div>
-				</div> -->
+
 				<div class="row">
 					<label for="city">Humidity</label>
 					<div class="tf">
-						<input type="text" id="Humidity" name="user_city" placeholder="Required"><br />
+						<input type="text" id="Humidity" name="user_city" placeholder="Required" max="100"><br />
 					</div>
 				</div>
-				<!-- <div class="row">
-					<label for="zip">Zip Code</label><br><br />
-					<div class="tf">
-						<input type="number" id="zip" name="zip_code" placeholder="511098"><br><br />
-					</div>
-				</div> -->
 				<div class="row">
 					<label for="city">Rainfall</label>
 					<div class="tf">
-						<input type="text" id="Rainfall" name="user_city" placeholder="Required"><br />
+						<input type="text" id="Rainfall" name="user_city" placeholder="Required" max="299"><br />
 					</div>
 				</div>
 			</fieldset>
-			<!-- <div class="border_3"></div> -->
-			<!-- <fieldset>
-				<legend class="newsletter">Newsletter</legend>
-				<p> Select the newsletter you would like to receive.</p>
-				<input type="checkbox" name="html" value="HTML"><label class="checkbox-label"> HTML</label><br><br />
-				<input type="checkbox" name="css" value="CSS"><label class="checkbox-label"> CSS News</label><br><br />
-				<input type="checkbox" name="javascript" value="Javascript"><label class="checkbox-label"> Javascript
-					News</label><br></br>
-				<p>Newsletter Format</p>
-				<input type="radio" name="radio" value="Html_format"><label> HTML</label><br></br />
-				<input type="radio" name="radio" value="Plain_format"><label> Plain text</label><br><br />
-				<p>Other topics you would like to hear about</p>
-				<textarea class="area" rows="3"></textarea>
-			</fieldset> -->
-			<button type="submit" style="margin-top: 2%;" id="apiButton">Analyze </button>
+
+			<button type="button" style="margin-top: 2%;" onclick="showPopup()">Analyze </button>
 			<p class="footer">&copy; Copyright The FASAL FUSION</p>
 		</form>
 	</div>
+	<div id="popup" class="popup">
+		<div class="popup-content">
+			<!-- <span class="close" onclick="closePopup()">&times;</span> -->
+			<!-- Include the content of the second code here -->
+			<article class="card card__content">
+				<header>
+					<figcaption class="header__caption" role="presentation">
+						<span class="header__tag tag--primary">WHEAT</span>
+						<span class="header__tag tag--secondary"><span id="tag">Fasal </span>Fusion</span>
+					</figcaption>
+				</header>
+				<main class="card__body">
+					<h1 class="title--primary">Recommended Crop</h1>
+					<p class="description">
+						Wheat is a type of cereal grain that is widely used for human consumption
+						and for producing other grains such as barley and oats.
+					</p>
+				</main>
+				<footer class="footer">
+					<div class="expand__indicator">
+						<span class="link__text">Read more</span>
+					</div>
+					<div class="footer__navigation">
+						<button class="icon__link" onclick="closePopup()">
+							Close
+						</button>
+					</div>
+				</footer>
+			</article>
+		</div>
+	</div>
 
 	<script src="index.js"></script>
+	<script>
+		function showPopup() {
+			var popup = document.getElementById("popup");
+			popup.style.display = "block";
+		}
+
+		function closePopup() {
+			var popup = document.getElementById("popup");
+			popup.style.display = "none";
+		}
+	</script>
+	<!-- </div> -->
 </body>
 
 </html>
